// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div>
  <SQScanner
    os="win"
  />
  <BuildWrapper
    className="huge-spacer-top"
    os="win"
  />
  <h4
    className="huge-spacer-top spacer-bottom"
  >
    onboarding.analysis.sq_scanner.execute
  </h4>
  <InstanceMessage
    message="onboarding.analysis.sq_scanner.execute.text"
  >
    <Component />
  </InstanceMessage>
  <CodeSnippet
    snippet="build-wrapper-win-x86-64.exe --out-dir bw-output make clean all"
  />
  <CodeSnippet
    isOneLine={true}
    snippet={
      Array [
        "sonar-scanner.bat",
        "-D\\"sonar.projectKey=projectKey\\"",
        undefined,
        "-D\\"sonar.sources=.\\"",
        "-D\\"sonar.cfamily.build-wrapper-output=bw-output\\"",
        "-D\\"sonar.host.url=host\\"",
        "-D\\"sonar.login=token\\"",
      ]
    }
  />
  <p
    className="big-spacer-top markdown"
    dangerouslySetInnerHTML={
      Object {
        "__html": "onboarding.analysis.sq_scanner.docs",
      }
    }
  />
</div>
`;

exports[`renders correctly 2`] = `
<div>
  <SQScanner
    os="linux"
  />
  <BuildWrapper
    className="huge-spacer-top"
    os="linux"
  />
  <h4
    className="huge-spacer-top spacer-bottom"
  >
    onboarding.analysis.sq_scanner.execute
  </h4>
  <InstanceMessage
    message="onboarding.analysis.sq_scanner.execute.text"
  >
    <Component />
  </InstanceMessage>
  <CodeSnippet
    snippet="build-wrapper-linux-x86-64 --out-dir bw-output make clean all"
  />
  <CodeSnippet
    isOneLine={false}
    snippet={
      Array [
        "sonar-scanner",
        "-Dsonar.projectKey=projectKey",
        undefined,
        "-Dsonar.sources=.",
        "-Dsonar.cfamily.build-wrapper-output=bw-output",
        "-Dsonar.host.url=host",
        "-Dsonar.login=token",
      ]
    }
  />
  <p
    className="big-spacer-top markdown"
    dangerouslySetInnerHTML={
      Object {
        "__html": "onboarding.analysis.sq_scanner.docs",
      }
    }
  />
</div>
`;

exports[`renders correctly 3`] = `
<div>
  <SQScanner
    os="linux"
  />
  <BuildWrapper
    className="huge-spacer-top"
    os="linux"
  />
  <h4
    className="huge-spacer-top spacer-bottom"
  >
    onboarding.analysis.sq_scanner.execute
  </h4>
  <InstanceMessage
    message="onboarding.analysis.sq_scanner.execute.text"
  >
    <Component />
  </InstanceMessage>
  <CodeSnippet
    isOneLine={true}
    snippet="build-wrapper-linux-x86-64 --out-dir bw-output make clean all"
  />
  <CodeSnippet
    isOneLine={false}
    snippet={
      Array [
        "sonar-scanner",
        "-Dsonar.projectKey=projectKey",
        "-Dsonar.organization=organization",
        "-Dsonar.sources=.",
        "-Dsonar.cfamily.build-wrapper-output=bw-output",
        "-Dsonar.host.url=host",
        "-Dsonar.login=token",
      ]
    }
  />
  <p
    className="big-spacer-top markdown"
    dangerouslySetInnerHTML={
      Object {
        "__html": "onboarding.analysis.sq_scanner.docs",
      }
    }
  />
</div>
`;
